fix: overflowing due to pre tag in algorithms

--- a/components/Page/Page.module.css
+++ b/components/Page/Page.module.css
@@ -37,5 +37,7 @@
 }
 
 .about > div:nth-of-type(2) > pre {
+  width: 80vw;
+  overflow-x: auto;
   font-size: 1rem;
 }
