--- a/components/System/System.module.css
+++ b/components/System/System.module.css
@@ -3,6 +3,7 @@
   width: fit-content;
   display: grid;
   row-gap: 0.2rem;
+  align-content: start;
 }
 
 .newItem {
